# barttorvik-machine

./: Dockerfile  Makefile  README.md  autotrader.py  browser.py  conference_map.yaml  config.py  config.yaml  docker-compose.yml  ev.py  main.py  matcher.py  output.py  pyproject.toml  pytest.ini  requirements.txt  run_best_bets.py  run_final_best_bets.py  run_real_esports_bets.py  setup.cfg  setup_production.sh  test_demo_api.py  test_kalshi_api.py  test_main_kalshi.py  test_make_tournament.py  test_march_madness.py  test_production.py  test_regular_api.py  vercel.json
dashboard/dashboard-backend/: pyproject.toml
dashboard/dashboard-backend/app/: main.py  scraper.py
dashboard/dashboard-frontend/: package-lock.json  package.json
dashboard/dashboard-frontend/src/: App.tsx
kalshi/: kalshi_client.py
scrapers/: concast_scraper.py  schedule_scraper.py  tourneycast_scraper.py
