[metadata]
name = kalshi-best-bets
version = 1.0.0
description = Automated Kalshi betting bot for NCAA markets
author = Kalshi Best Bets
author_email = 
url = 
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    rapidfuzz>=3.0.0
    pydantic>=2.0.0
    python-dotenv>=1.0.0
    lxml>=4.9.0
    pandas>=2.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = kalshi_best_bets*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0

[options.entry_points]
console_scripts =
    kalshi-bets = kalshi_best_bets.main:main

[options.package_data]
kalshi_best_bets = py.typed
